--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".aty.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".aty.Main2Activity" />
+        <activity android:name=".aty.Main3Activity" />
+        <activity android:name=".aty.Main4Activity" />
+        <activity android:name=".aty.Main3_And4Activity"></activity>
     </application>
 
 </manifest>
